dynamic of time series data illustrated

--- a/C4-L00.qmd
+++ b/C4-L00.qmd
@@ -17,7 +17,7 @@ keywords:
 author: Oren Bochman
 image: course-banner.png
 fig-caption: Notes about ... Bayesian Statistics
-title-block-banner: banner_deep.jpg
+title-block-banner: images/banner_deep.jpg
 #bibliography: references.bib
 format: 
     html: 
