--- a/C4-L03.qmd
+++ b/C4-L03.qmd
@@ -20,27 +20,26 @@ keywords:
   - R code
 image: course-banner.png
 fig-caption: Notes about ... Bayesian Statistics
-title-block-banner: banner_deep.jpg
-#bibliography: bibliography.bib
-format: 
-    html: 
-        code-fold: true
-from: markdown+emoji
+title-block-banner: images/banner_deep.jpg
 
 ---
-
 
 [Normal Dynamic Linear Models (NDLMs) are defined and illustrated in this module using several examples Model building based on the forecast function via the superposition principle is explained. Methods for Bayesian filtering, smoothing and forecasting for NDLMs in the case of known observational variances and known system covariance matrices are discussed and illustrated.]{.mark}.
 
 The Normal Dynamic Linear Model (DLM)  covered  [@prado2023time pp. 117-144]
 
-# Learning Objectives
+
+:::{.callout-note}
+
+## Learning Objectives
 
 - [x] Use R for analysis and forecasting of time series using NDLM (case of known observational and system variances) [\#](#m3g1)
 - [x] Derive the equations to obtain posterior inference and forecasting in the NDLM with known observational and system variances, including the filtering, smoothing and forecasting equations [\#](#m3g2)
 - [x] Apply the NDLM superposition principle and explain the role of the forecast function [\#](#m3g3)
 - [x] Define trend and regression normal DLMs [\#](#m3g4)
 - [x] Explain the general normal dynamic linear model (NDLM) representation [\#](#m3g5)
+
+:::
 
 # The Normal Dynamic Linear Model: Definition, Model classes &  The Superposition Principle
 
@@ -54,13 +53,21 @@ The Normal Dynamic Linear Model (DLM)  covered  [@prado2023time pp. 117-144]
 
 - The text also diverge when it comes to the $F$ in the state space representation equation. In @west2013bayesian it is a matrix and in @prado2023time it is called a vector. In some places it is referenced as a $p \times 1$. As far as I can tell this reflects different state space representation of the model which neither text is particularly clear. 
 - Although we are give a couple of motivational examples the way they generalize to the NLDM is not as clear as in @west2013bayesian but this text is very verbose and covers much more material.
-@west2013bayesian also discusses how the math relates to more common statistical scenarios and how the model can be adapted to these scenarios e.g. replacing the obs. normal distribution with a t-distribution or a mixture of normals to handle outliers. I.e. see NLDMs as a looser framework with the assumptions of independence and normality as guidelines rather than strict assumptions.
+
+- @west2013bayesian also discusses how the math relates to more common statistical scenarios and how the model can be adapted to these scenarios e.g. replacing the obs. normal distribution with a t-distribution or a mixture of normals to handle outliers. I.e. see NLDMs as a looser framework with the assumptions of independence and normality as guidelines rather than strict assumptions.
+
 In @prado2023time we quickly get a large number of mathematically concise format, that illustrate how NLDM generalize other time series models. However these examples assume we are sufficiently familiar with this models.
+
 - The NDLM is also a hierarchical model which we have not looked into in much depth in this specialization. This is another missed opportunity to connect to previous material and deepen our understanding. Particularly as the bayesian formulation should be able to overcome the limitations of the frequentist approach where we need to make strong assumptions on IID of the shocks but in a time series local observations often highly correlated. 
+
 - NLDM have efficient algorithms for inference and forecasting mostly by using the Kalman filter, again this is not mentioned not is a bayesian formulation presented
+
 - So I guess the main issue is that the vide just lists lots of equations and does not really without providing a good intuition behind the model.
+
 - I hope that with the rest of this and the next lesson we can get a better understanding of the NLDM.
+
 - I ended up skimming through large portions of @west2013bayesian which goes into much greater detail on the NLDM. The first and second polynomial models developed, explained and motivation is clearer. The state space representation is not explained but the model is developed in a more coherent way and this is a good starting point for developing a more intuitive understanding of the NLDMs. The notation in this book is also easier to follow.
+
   - We use $\theta_t$ for the parameters of the vector and \theta_{t,1} and \theta_{t,2} for the first two components of the parameter vector. This continues the convention of greek characters for parameters from the previous courses and many texts. However if the parameters have a clear meaning it much easier to follow math where we use a more descriptive notation and avoid the second subscripts.
 - The state space representation here is omitted. The $F$ vector or matrix is not really motivates as a latent state space representation.
 
