--- a/C4-L04.qmd
+++ b/C4-L04.qmd
@@ -18,14 +18,9 @@ keywords:
   - Regression Models
   - Superposition Principle
   - R code
-author: Oren Bochman
 image: course-banner.png
 fig-caption: Notes about ... Bayesian Statistics
-title-block-banner: banner_deep.jpg
-#bibliography: bibliography.bib
-format: 
-    html: 
-        code-fold: true
+title-block-banner: images/banner_deep.jpg
 ---
 
 
