--- a/C4-L05.qmd
+++ b/C4-L05.qmd
@@ -30,7 +30,7 @@ keywords:
 author: Oren Bochman
 image: course-banner.png
 fig-caption: Notes about ... Bayesian Statistics
-title-block-banner: banner_deep.jpg
+title-block-banner: images/banner_deep.jpg
 format: 
     html: 
         code-fold: true
