--- a/C4-L06.qmd
+++ b/C4-L06.qmd
@@ -14,7 +14,7 @@ keywords:
 author: Oren Bochman
 image: course-banner.png
 fig-caption: Notes about ... Bayesian Statistics
-title-block-banner: banner_deep.jpg
+title-block-banner: images/banner_deep.jpg
 #bibliography: bibliography.bib
 format: 
     html: 
